Fixed IE bug with SVG showing in wrong position

--- a/scss/mountain-scene.scss
+++ b/scss/mountain-scene.scss
@@ -1,7 +1,3 @@
-.mountain-scene-ctr {
-    position: absolute;
-    height: 200px;
-}
 .mountain-scene {
 	.mountains {
 		opacity:0.5;
